@startuml product inventory

    entity roles {
        * role VARCHAR(25) <<PK>>
        --
    }

    entity users {
        * id INT(10) <<PK>> AUTO INCREMENT
        --
        * name VARCHAR(100)
        * email VARCHAR(50) <<unique>>
        * password VARCHAR(25)
          phone_number VARCHAR(15)
          role VARCHAR(25) <<FK>>
          created_at TIMESTAMP NULL
          updated_at TIMESTAMP CURRENT_TIMESTAMP
    }

    entity categories {
        * category VARCHAR(50) <<PK>>
    }

    entity products {
        * id VARCHAR(25) <<PK>> uniqid()
        --
        * name VARCHAR(100)
          category VARCHAR(50) <<FK>>
          price INT(10) UNSIGNED 0
          stock INT(10) UNSIGNED 0
          attachment VARCHAR(25) 
          admin_email VARCHAR(50) <<FK>>
          created_at TIMESTAMP NULL
          updated_at TIMESTAMP CURRENT_TIMESTAMP
    }

    entity suppliers {
        * id INT(10) <<PK>> AUTO INCREMENT
        --
        * name VARCHAR(100)
    }

    entity purchases {
        * id VARCHAR(25) <<PK>> uniqid('pc_')
        --
          supplier INT(10) <<FK>>
          status ENUM ['Pending', 'Approved', 'Done']
        * admin_email VARCHAR(50) <<FK>>
        * total INT(10)
          created_at TIMESTAMP CURRENT_TIMESTAMP
          updated_at TIMESTAMP CURRENT_TIMESTAMP
    }

    entity purchase_details {
        * id INT(10) <<PK>> AUTO INCREMENT
        --
        * purchase_id VARCHAR(25) <<FK>>
        * product_id VARCHAR(25) <<FK>>
        * product_name VARCHAR(100)
          product_category VARCHAR(50)
        * product_price INT(10) UNSIGNED
        * quantity INT(10) UNSIGNED
        * sub_total INT(10) UNSIGNED
    }

    entity purchase_orders {
        * id INT(10) <<PK>> AUTO INCREMENT
        --
        * product_id VARCHAR(25) <<FK>>
        * product_name VARCHAR(100)
          product_category VARCHAR(50)
        * product_price INT(10) UNSIGNED
        * quantity INT(10) UNSIGNED
    }

    ' entity customers {
    '     * id INT(10) <<PK>> AUTO INCREMENT
    '     --
    '     * name VARCHAR(256)
    ' }

    entity sales {
        * id VARCHAR(25) <<PK>> uniqid('sl_')
        --
        * admin_email VARCHAR(50) <<FK>>
        * total INT(10)
          created_at TIMESTAMP CURRENT_TIMESTAMP
          updated_at TIMESTAMP CURRENT_TIMESTAMP          
    }

    entity sale_details {
        * id INT(10) <<PK>> AUTO INCREMENT
        --
        * sale_id VARCHAR(25) <<FK>>
        * product_id VARCHAR(25) <<FK>>
        * product_name VARCHAR(100) 
          product_category VARCHAR(50)
        * product_price(10) UNSIGNED
        * quantity INT(10) UNSIGNED
        * sub_total INT(10) UNSIGNED
    }

    entity sale_orders {
        * id INT(10) <<PK>> AUTO INCREMENT
        --
        * product_id VARCHAR(25) <<FK>>
        * product_name VARCHAR(100)
          product_category VARCHAR(50)
        * product_price INT(10) UNSIGNED
        * quantity INT(10) UNSIGNED
    }

   roles }|--|| users : have
   categories }|--|| products : have
   users ||--|| products : inserted by
   suppliers ||--|{ purchases : supplied
   purchases ||--|{ purchase_details : have
   users ||--|{ purchases : create
   products }|--|| purchase_details : in
   products }|--|| purchase_orders : in
   products }|--|| sale_details : in
   sales ||--|{ sale_details : have
   users ||--|{ sales : create
   products }|--|| sale_orders : in

@enduml